2007-07-09  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by: Veerapuram Varadhan <vvaradhan@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c:
	(process_delegated_cal_object), (find_attendee_prop),
	(create_object), (modify_object_with_href):
	* calendar/e-cal-backend-exchange.c: (get_cal_owner),
	(e_cal_backend_exchange_get_sender),
	(e_cal_backend_exchange_get_sender_string),
	(e_cal_backend_exchange_get_owner_name):
	* calendar/e-cal-backend-exchange.h:
	* camel/camel-exchange-folder.c: (get_message),
	(camel_exchange_folder_construct):
	* mail/mail-stub-exchange.c: (unmangle_delegated_meeting_request),
	(unmangle_sender_field), (get_message):
	* mail/mail-utils.c: (mail_util_demangle_sender_field),
	(mail_util_demangle_delegated_meeting):
	* mail/mail-utils.h: Adding the delegation feature.

	Committing on behalf of Suman Manjunath <msuman@novell.com> and 
	Bharath Acharya <abharath@novell.com>	

2007-07-08  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes #442186, part of 341214 and #421091
	This set of fixes changes the very basic behaviour of folder
	loading in Exchange.  This version of Evolution-exchange should
	work much much much better for those having relatively big mail
	folders.  The optimization fix has been tested fairly well,
	however, may have introduced some regressions - considering the
	nature of the work.  Please feel free to mail me or file a bug in
	bugzilla.gnome.org, in case of any regressions or new bugs and assign 
	it to me. Refer to
	http://vvaradhan.blogspot.com/2007/06/evolution-exchange-performance-series_28.html
	for sample data.

	* camel/camel-exchange-folder.c:
	(camel_exchange_folder_add_message): update minfo with href as we
	store hrefs now.
	(camel_exchange_folder_construct): Pass hrefs loaded from disk
	* camel/camel-exchange-folder.h: Add href parameter to
	camel_exchange_folder_add_message ()
	* camel/camel-exchange-store.c: (stub_notification): stub